--- a/index.css
+++ b/index.css
@@ -135,25 +135,39 @@ td:nth-child(2) {
   body,
   html {
     background-color: var(--white);
+    width: 100vw;
     height: 100vh;
     margin: 0;
+    padding: 0;
   }
   .container {
-    width: 100%;
-    border-radius: 0px;
-    padding: 0px;
-    margin: 0px;
-  }
-
-  .container img {
-    width: 100%;
+    max-width: 100%;
     border-radius: 0px;
     padding: 0;
     margin: 0;
+    height: auto;
+  }
+
+  .container img {
+    display: block;
+    max-width: 100%;
+    border-radius: 0px;
+    padding: 0 !important;
+    margin: 0 !important;
+    transform: translateY(-10%);
   }
 
   .prep-time {
     background-color: var(--rose-50);
     border-radius: 10px;
+    margin: 20px;
+  }
+
+  .recipe-name,
+  .description,
+  .ingredients,
+  .instructions,
+  .nutrition {
+    padding-left: 20px;
   }
 }
